# openstrap

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: bootstrapper.rs  config.rs  launcher.rs  main.rs  uninstall.rs  utils.rs
