[package]
name = "korone-bootstrapper" # Change the name
version = "0.1.1" # Change the version
edition = "2024"

[dependencies]
anyhow = "1.0.99"
figlet-rs = "0.1.5"
open = "5.3.2"
paris = { version = "1.5.15", features = ["macros", "timestamps"] }
regex = "1.11.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
termcolor = "1.4.1"
tokio = { version = "1.47.1", features = ["full"] }
windows-registry = "0.6.0"
zip = "5.0.0"
indicatif = { version = "0.17", features = ["tokio"] }
futures-util = "0.3"
walkdir = "2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
