[package]
name = "korone-bootstrapper" # Change the name
version = "0.1.1" # Change the version
edition = "2024"

[dependencies]
anyhow = "1.0.102"
figlet-rs = "0.1.5"
open = "5.3.3"
paris = { version = "1.5.15", features = ["macros", "timestamps"] }
regex = "1.12.2"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
termcolor = "1.4.1"
tokio = { version = "1.49.0", features = ["full"] }
zip = "8.1.0"
indicatif = { version = "0.18.4", features = ["tokio"] }
futures-util = "0.3.32"
walkdir = "2"
cfg-if = "1.0.4"
self-replace = "1.5.0"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.6.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
